# min-gemma4

./: .gitignore  README.md  audio_model.py  model.py  pyproject.toml  text_model.py  vision_model.py
config/: config.json  processor_config.json
scripts/: download_weights.py  download_weights.sh  infer.py  infer.sh  sanity_check_transformers.py  sanity_check_transformers.sh  sanity_check_vision_transformers.py  sanity_check_vision_transformers.sh
