[project]
name = "min-gemma4"
version = "0.1.0"
description = "Minimal uv scaffold for Gemma 4 experiments."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "safetensors>=0.5.3",
    "tokenizers>=0.22.0",
    "torch>=2.6.0",
    "tqdm>=4.67.0",
    "transformers>=5.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
